--- a/src/메모.md
+++ b/src/메모.md
@@ -1,185 +1,40 @@
-네, 이해했습니다. JS 파일도 수정할 수 있으니 HTML과 JS 파일을 모두 최적화하겠습니다. 여기 수정된 HTML과 JS 코드입니다:
-
-HTML (index.html):
-
-```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What color?</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        #textDisplay {
-            font-size: 24px;
-            font-weight: bold;
-            text-align: center;
-        }
-        .color-picker {
-            width: 100%;
-            max-width: 100%;
-            padding: 0 20px;
-            box-sizing: border-box;
-            position: fixed;
-            bottom: 20px;
-            left: 0;
-        }
-        .slider-container {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-        label {
-            flex: 0 0 30px;
-            font-weight: bold;
-            text-align: right;
-            margin-right: 10px;
-        }
-        input[type="range"] {
-            flex: 1;
-            -webkit-appearance: none;
-            width: 100%;
-            height: 15px;
-            border-radius: 5px;
-            background: #d3d3d3;
-            outline: none;
-            opacity: 0.7;
-            transition: opacity .2s;
-        }
-        input[type="range"]:hover {
-            opacity: 1;
-        }
-        input[type="range"]::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            appearance: none;
-            width: 25px;
-            height: 25px;
-            border-radius: 50%;
-            cursor: pointer;
-            border: none;
-        }
-        input[type="range"]::-moz-range-thumb {
-            width: 25px;
-            height: 25px;
-            border-radius: 50%;
-            cursor: pointer;
-            border: none;
-        }
-        #red::-webkit-slider-thumb, #red::-moz-range-thumb { background: #FF4136; }
-        #green::-webkit-slider-thumb, #green::-moz-range-thumb { background: #2ECC40; }
-        #blue::-webkit-slider-thumb, #blue::-moz-range-thumb { background: #0074D9; }
-        #codeInput {
-            position: fixed;
-            bottom: 70px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 10px;
-            width: 200px;
-            display: none;
-        }
-        #submitButton {
-            position: fixed;
-            bottom: 70px;
-            left: 50%;
-            transform: translateX(110px);
-            padding: 10px;
-            display: none;
-        }
-    </style>
-</head>
-<body>
-    <div id="textDisplay">What color?</div>
-    <div class="color-picker">
-        <div class="slider-container">
-            <label for="red">R:</label>
-            <input type="range" id="red" min="0" max="255" value="0" step="1">
-        </div>
-        <div class="slider-container">
-            <label for="green">G:</label>
-            <input type="range" id="green" min="0" max="255" value="100" step="1">
-        </div>
-        <div class="slider-container">
-            <label for="blue">B:</label>
-            <input type="range" id="blue" min="0" max="255" value="0" step="1">
-        </div>
-    </div>
-    <input type="text" id="codeInput" placeholder="Enter code here">
-    <button id="submitButton">Submit</button>
-    <script src="/js/script/font.js"></script>
-</body>
-</html>
-```
-
-JS (font.js):
+네, 입력 필드의 ID를 "codeInput"으로 변경하겠습니다. 코드를 다음과 같이 수정하겠습니다:
 
 ```javascript
-const redSlider = document.getElementById("red");
-const greenSlider = document.getElementById("green");
-const blueSlider = document.getElementById("blue");
-const textDisplay = document.getElementById("textDisplay");
-const codeInput = document.getElementById("codeInput");
-const submitButton = document.getElementById("submitButton");
+document.addEventListener("DOMContentLoaded", function () {
+    const sunIcon = document.getElementById("sun-icon");
+    const body = document.body;
+    const codeText = document.getElementById("code-text");
+    let isDark = false;
 
-let solve_code = null;
+    // 입력 필드와 제출 버튼 생성
+    const inputField = document.createElement("input");
+    inputField.type = "text";
+    inputField.id = "codeInput"; // 여기를 "codeInput"으로 변경
+    inputField.placeholder = "Enter code here";
+    inputField.style.position = "fixed";
+    inputField.style.bottom = "20px";
+    inputField.style.left = "50%";
+    inputField.style.transform = "translateX(-50%)";
+    inputField.style.padding = "10px";
+    inputField.style.width = "200px";
+    inputField.style.display = "none";
 
-async function updateColor() {
-    const r = parseInt(redSlider.value);
-    const g = parseInt(greenSlider.value);
-    const b = parseInt(blueSlider.value);
-    const color = `rgb(${r},${g},${b})`;
-    document.body.style.backgroundColor = color;
-    if (r === 0 && g === 100 && b === 0) {
-        if (solve_code === null) {
-            solve_code = await findDocumentByCamo("begin", "code");
+    // ... (나머지 코드는 그대로 유지)
+
+    submitButton.addEventListener("click", async function () {
+        const code = await findDocumentByCamo("test", "code");
+        const cleancode = code.replace(/"/g, "");
+        const enteredCode = inputField.value.trim(); // 여기서 inputField.value 사용
+        if (enteredCode === cleancode) {
+            alert("Correct code!");
+            checkCode() // checkCode 함수 호출
+        } else {
+            alert("Incorrect code. Try again.");
         }
-        textDisplay.textContent = "CODE:" + solve_code;
-        showInputField();
-        textDisplay.style.color = "black";
-    } else {
-        textDisplay.textContent = "what color?";
-        hideInputField();
-        textDisplay.style.color = "#006400";
-    }
-}
-
-function showInputField() {
-    codeInput.style.display = "block";
-    submitButton.style.display = "inline-block";
-}
-
-function hideInputField() {
-    codeInput.style.display = "none";
-    submitButton.style.display = "none";
-}
-
-redSlider.addEventListener("input", updateColor);
-greenSlider.addEventListener("input", updateColor);
-blueSlider.addEventListener("input", updateColor);
-
-submitButton.addEventListener("click", checkCode);
-
-// 여기에 findDocumentByCamo, findDocumentBycode, checkCode 함수를 추가하세요
-// (이 함수들은 이전 코드에서 그대로 사용할 수 있습니다)
-
-updateColor(); // 초기 색상 설정
+        inputField.value = ""; // 입력 필드 초기화
+    });
+});
 ```
 
-주요 변경 사항:
-
-1. HTML에서 텍스트 디스플레이와 코드 입력 필드를 직접 추가했습니다.
-2. CSS를 조정하여 슬라이더가 화면 하단에 고정되도록 했습니다.
-3. JS 코드를 간소화하고, HTML 요소를 직접 참조하도록 변경했습니다.
-4. 이벤트 리스너를 직접 추가하여 코드를 더 명확하게 만들었습니다.
-
-이렇게 수정하면 슬라이더의 동그란 부분(thumb)이 잘 보이고, 슬라이더가 화면 너비를 최대한 활용하며, 전체적인 레이아웃이 의도한 대로 작동할 것입니다. 텍스트는 화면 중앙에 표시되고, 슬라이더는 화면 하단에 위치하게 됩니다.
+이렇게 수정하면 입력 필드의 ID가 "codeInput"으로 설정되어 `checkCode` 함수에서 올바르게 참조할 수 있게 됩니다. 또한, `submitButton` 이벤트 리스너에서 `checkCode` 함수를 호출하도록 추가했습니다.
