--- a/src/메모.md
+++ b/src/메모.md
@@ -1,40 +1,21 @@
-네, 입력 필드의 ID를 "codeInput"으로 변경하겠습니다. 코드를 다음과 같이 수정하겠습니다:
+제공하신 HTML과 JavaScript 코드를 기반으로, submitButton을 클릭했을 때 checkCode 함수가 실행되도록 수정하겠습니다. 다음과 같이 JavaScript 코드의 마지막 부분을 수정하면 됩니다:
 
 ```javascript
-document.addEventListener("DOMContentLoaded", function () {
-    const sunIcon = document.getElementById("sun-icon");
-    const body = document.body;
-    const codeText = document.getElementById("code-text");
-    let isDark = false;
+redSlider.addEventListener("input", () => updateColor());
+greenSlider.addEventListener("input", () => updateColor());
+blueSlider.addEventListener("input", () => updateColor());
 
-    // 입력 필드와 제출 버튼 생성
-    const inputField = document.createElement("input");
-    inputField.type = "text";
-    inputField.id = "codeInput"; // 여기를 "codeInput"으로 변경
-    inputField.placeholder = "Enter code here";
-    inputField.style.position = "fixed";
-    inputField.style.bottom = "20px";
-    inputField.style.left = "50%";
-    inputField.style.transform = "translateX(-50%)";
-    inputField.style.padding = "10px";
-    inputField.style.width = "200px";
-    inputField.style.display = "none";
+// Submit 버튼에 이벤트 리스너 추가
+const submitButton = document.getElementById("submitButton");
+submitButton.addEventListener("click", checkCode);
 
-    // ... (나머지 코드는 그대로 유지)
-
-    submitButton.addEventListener("click", async function () {
-        const code = await findDocumentByCamo("test", "code");
-        const cleancode = code.replace(/"/g, "");
-        const enteredCode = inputField.value.trim(); // 여기서 inputField.value 사용
-        if (enteredCode === cleancode) {
-            alert("Correct code!");
-            checkCode() // checkCode 함수 호출
-        } else {
-            alert("Incorrect code. Try again.");
-        }
-        inputField.value = ""; // 입력 필드 초기화
-    });
-});
+updateColor();
 ```
 
-이렇게 수정하면 입력 필드의 ID가 "codeInput"으로 설정되어 `checkCode` 함수에서 올바르게 참조할 수 있게 됩니다. 또한, `submitButton` 이벤트 리스너에서 `checkCode` 함수를 호출하도록 추가했습니다.
+이 수정사항을 적용하면:
+
+1. redSlider, greenSlider, blueSlider에 대한 이벤트 리스너가 화살표 함수를 사용하여 올바르게 설정됩니다.
+2. submitButton 요소를 가져와서 변수에 저장합니다.
+3. submitButton에 클릭 이벤트 리스너를 추가하고, 클릭 시 checkCode 함수가 실행되도록 합니다.
+
+이렇게 하면 사용자가 Submit 버튼을 클릭할 때 checkCode 함수가 실행되어, 입력된 코드를 확인하고 적절한 페이지로 이동하게 됩니다.
